# vxdb

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
crates/vxdb-core/: Cargo.toml
crates/vxdb-core/src/: collection.rs  error.rs  filter.rs  hybrid.rs  lib.rs  types.rs
crates/vxdb-core/src/distance/: cosine.rs  dot.rs  euclidean.rs  mod.rs
crates/vxdb-core/src/index/: flat.rs  hnsw.rs  mod.rs
crates/vxdb-core/src/storage/: metadata.rs  mmap.rs  mod.rs  persistent.rs  wal.rs
crates/vxdb-python/: Cargo.toml
crates/vxdb-python/src/: lib.rs
crates/vxdb-server/: Cargo.toml
crates/vxdb-server/src/: config.rs  main.rs  routes.rs
docs/: comparison.mdx  examples.mdx  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: client.mdx  collection.mdx  database.mdx
docs/core-concepts/: collections.mdx  hybrid-search.mdx  metadata-filtering.mdx  persistence.mdx  vector-search.mdx
docs/integrations/: cohere.mdx  custom-embeddings.mdx  langchain.mdx  ollama.mdx  openai.mdx  sentence-transformers.mdx
docs/server/: docker.mdx  overview.mdx  python-client.mdx  rest-api.mdx
examples/: README.md  cohere_embeddings.ipynb  hybrid_search.ipynb  langchain_integration.ipynb  openai_embeddings.ipynb  quickstart.ipynb  sentence_transformers.ipynb
python/vxdb/: __init__.py  client.py  embedding.py
tests/: test_embedded.py  test_server_client.py
