[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "vxdb"
version = "0.1.0"
description = "A lightweight, high-performance vector store with a Rust backend"
requires-python = ">=3.9"
license = "Apache-2.0"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
server = ["httpx>=0.27"]

[tool.maturin]
manifest-path = "crates/vxdb-python/Cargo.toml"
python-source = "python"
module-name = "vxdb._vxdb"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["tests"]
