[package]
name = "vxdb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core engine for vxdb — a lightweight, high-performance vector store"

[features]
default = []
simd = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
rand = "0.8"
memmap2 = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
