[package]
name = "vxdb-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP server for vxdb"

[[bin]]
name = "vxdb-server"
path = "src/main.rs"

[dependencies]
vxdb-core = { path = "../vxdb-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
